Commit of redesign of of Form, Query, TableDataModel